# session-buddy

./: .betterleaks.toml  .coverage  .coverage-ratchet.json  .coverage.les-pro.pid11853.XiUf9XVx.HNQIp837rWOh  .coverage.les-pro.pid12088.XEpGEa8x.HNQIp837rWOh  .coverage.les-pro.pid27920.XdYp4q1x.HNQIp837rWOh  .coverage.les-pro.pid27930.Xm2zhIax.HNQIp837rWOh  .coverage.les-pro.pid49971.XvwSXj2x.HNQIp837rWOh  .coverage.les-pro.pid49999.XKNe3Abx.HNQIp837rWOh  .coverage.les-pro.pid50013.Xag9b58x.HNQIp837rWOh  .gitignore  .gitignore.bak  .lycheecache  .markdownlinkcheck.json  .mcp.json  .pyscn.toml  .vulture-whitelist.py  AGENTS.md  AI_MAESTRO_FEATURE_STATUS.md  ANALYTICS_ENGINE_IMPLEMENTATION.md  ANALYTICS_ENGINE_USAGE.md  ARCHITECTURE.md  BUG_FIX_PROGRESS.md  CHANGELOG.md  CHANGELOG.md.backup.json  CHECKPOINT_2025-02-10.md  CHECKPOINT_SUMMARY.md  CLAUDE.md  CLAUDE_FLOW_INTEGRATION_PLAN_V2.md  COMPREHENSIVE_MEMORY_ENHANCEMENT_PLAN.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  ENGRAM_FEATURE_1_QUERY_CACHE.md  ENGRAM_FEATURE_2_NGRAM_FINGERPRINT.md  INTEGRATION_ANALYSIS_COMPARISON.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  LICENSE  MEMU_INSPIRED_FEATURES_PLAN.md  PERFORMANCE_ANALYSIS_PHASE1_SECURITY.md  PHASE2_AUTO_DISCOVERY_IMPLEMENTATION.md  (+50 more)
.cache/: pip-audit-latest.json
.claude/: settings.json
.claude-plugin/: plugin.json
.oneiric_cache/: runtime_health.json  runtime_telemetry.json  workflow_checkpoints.sqlite
commands/: session-buddy-checkpoint.md  session-buddy-end.md  session-buddy-start.md
docs/: ACB_MIGRATION_PLAN.md  ADMIN_SHELL_TRACKING_QUICKREF.md  AKOSHA_API_REFERENCE.md  AKOSHA_API_REFERENCE.md.backup.json  AKOSHA_USER_GUIDE.md  AKOSHA_USER_GUIDE.md.backup  AKOSHA_USER_GUIDE.md.backup.json  API_KEY_SETUP.md  CLAUDE_QWEN_CONFIG_SYNC.md  CRACKERJACK.md  CRACKERJACK_METRICS_MONITORING.md  CRACKERJACK_MONITORING_IMPLEMENTATION.md  CRACKERJACK_MONITORING_IMPLEMENTATION.md.backup  CRACKERJACK_MONITORING_IMPLEMENTATION.md.backup.json  CRACKERJACK_MONITORING_QUICK_START.md  CRACKERJACK_MONITORING_QUICK_START.md.backup  CRACKERJACK_MONITORING_QUICK_START.md.backup.json  DEAD_CODE_DETECTION.md  DEAD_CODE_TOOLS_COMPARISON.md  DI_USAGE_GUIDE.md  ENCRYPTION_IMPLEMENTATION.md  FASTMCP_UNHASHABLE_BUG.md  HOOKS_SIMPLIFICATION_REPORT.md  JSON_SCHEMA_REFERENCE.md  JSON_SCHEMA_REFERENCE.md.backup  JSON_SCHEMA_REFERENCE.md.backup.json  JWT_AUTHENTICATION.md  JWT_AUTH_IMPLEMENTATION_SUMMARY.md  JWT_AUTH_QUICKREF.md  MEMORI_INTEGRATION_PATHWAYS.md  MIGRATION_STRATEGY.md  ONEIRIC_MCP_ANALYSIS.md  PATHWAY_1_IMPLEMENTATION_PLAN.md  PHASE2_1_SUMMARY.md  PHASE2_3_SINGLETON_CLEANUP_PLAN.md  PHASE3_ARCHITECTURE.md  PHASE3_INTEGRATION_GUIDE.md  PHASE3_README.md  PHASE4_MCP_TOOLS_IMPLEMENTATION.md  POOL_IMPLEMENTATION.md  (+32 more)
docs/api/: WEBSOCKET_API.md  WEBSOCKET_API.md.backup  WEBSOCKET_API.md.backup.json
docs/archive/: MEMORY_ENHANCEMENT_INTEGRATION_PLAN.md  README.md  UNIFIED_MEMORY_ENHANCEMENT_PLAN.md
docs/design/: SKILL_METRICS_AGGREGATION.md  SKILL_METRICS_ARCHITECTURE.md  SKILL_METRICS_IMPLEMENTATION.md
docs/developer/: ARCHITECTURE.md  INTEGRATION.md  PARAMETER_VALIDATION.md  QUALITY_SCORING_V2.md  TESTING-QUICK-REFERENCE.md  TESTING.md
docs/features/: AI_INTEGRATION.md  AUTO_LIFECYCLE.md  INSIGHTS_CAPTURE.md  INTELLIGENCE_QUICK_START.md  SELECTIVE_AUTO_STORE.md  TOKEN_OPTIMIZATION.md  hooks_and_causal_chains.md
docs/grafana/: phase4-skills-dashboard.json
docs/guides/: operational-modes-architecture.md  operational-modes.md
docs/initialization/: TAXONOMY_INITIALIZATION.md
docs/integration/: phase3_intelligence_integration_complete.md
docs/migrations/: ONEIRIC_MIGRATION_COMPLETE.md  ONEIRIC_MIGRATION_PLAN.md  README.md  V3_TO_V4_MIGRATION_GUIDE.md  (+2 more)
examples/: analytics_example.py  jwt_auth_demo.py  run_prometheus_exporter.py  run_websocket_server.py  websocket_client_example.py
scripts/: TAXONOMY_INITIALIZATION_QUICKSTART.md  _frontmatter_apply_C1.py  activate_phase2_simple.py  add_kg_embedding_column.py  analyze_coverage.py  analyze_tests.py  benchmark_hnsw_performance.py  benchmark_subprocess_helper.py  compare_dead_code_tools.py  demo_conversation_storage.py  deploy_phase4.sh  dev-start.sh  download_embedding_model.py  fix_database_issues.py  initialize_fresh.sh  initialize_taxonomy.py  integrate_phase3.py  migrate_json_to_dhara.py  migrate_json_to_dhruva.py  migrate_json_to_druva.py  migrate_knowledge_graph_embeddings.py  migrate_skills.py  migrate_ulids.py  monitor_crackerjack_metrics.py  production_deploy.sh  quality_gate.py  quality_tracker.py  run_auto_discovery.py  run_ulid_contract_migration.py  run_ulid_migration.py  setup_grafana_dashboard.sh  test_auto_discovery.py  test_database_status.py  validate_architecture.py  validate_conversation_storage.py  validate_document_frontmatter.py
session_buddy/: __init__.py  acb_cache_adapter.py  advanced_features.py  advanced_search.py  app_monitor.py  cli.py  cli_with_modes.py  context_manager.py  crackerjack_integration.py  doctor.py  health_checks.py  health_checks.py.backup  health_checks.py.backup.json  interruption_manager.py  interruption_manager.py.backup.json  knowledge_graph_db.py  llm_providers.py  llm_providers.py.backup  llm_providers.py.backup.json  memory_optimizer.py  metrics.py  multi_project_coordinator.py  natural_scheduler.py  parameter_models.py  pools.py  quality_engine.py  reflection_tools.py  resource_cleanup.py  search_enhanced.py  server.py  server.py.backup  server.py.backup.json  server_core.py  server_optimized.py  settings.py  settings.py.backup  sync.py  team_knowledge.py  token_optimizer.py  trailing_period_removal_summary.md  (+2 more)
settings/: lite.yaml  memory_guard_policy.yaml  session-buddy.yaml  standard.yaml
tests/: README.md  README_CRACKERJACK_TESTS.md  conftest.py  conftest_optimizations.py  helpers.py  load_test_websocket.py  test_collaborative_filtering.py  test_helpers.py  test_phase4_analytics.py  test_phase4_integrations.py  test_settings.yaml  test_skills_semantic.py  test_skills_tracker.py  test_skills_workflow.py  test_sync_improvements.py  test_websocket_server.py
(+694 files in other folders)
