[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-buddy"
version = "0.19.7"
description = "A Session Management MCP Server for Claude Code"
readme = "README.md"
authors = [{name = "Les Leslie", email = "les@wedgwoodwebworks.com"}]
requires-python = ">=3.13"
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=25.1.0",
    "fastmcp>=2.14.5",
    "hatchling>=1.28.0",
    "numpy>=2.4.2",
    # onnxruntime, transformers removed — session-buddy uses HTTP embedding providers
    # (llama-server → Ollama → graceful degradation) for vector embeddings.
    # This removes a transitive dependency conflict across the Bodai ecosystem.
    "pydantic>=2.12.5",
    "duckdb>=1.4.4",
    "tiktoken>=0.12.0",
    "aiohttp>=3.13.3",
    "httpx>=0.27",
    "rich>=14.3.2",
    "structlog>=25.5.0",
    "typer>=0.21.1",
    "psutil>=7.2.2",
    "crackerjack>=0.52.0",
    "prometheus-client>=0.24.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "websockets>=15.0",
    "mcp-common[treesitter,llm]>=0.14.1",
    "dhara>=0.7.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.urls]
documentation = "https://github.com/lesleslie/session-buddy"
homepage = "https://github.com/lesleslie/session-buddy"
repository = "https://github.com/lesleslie/session-buddy"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = [
    "tests",
]
addopts = [
    "--cov=session_buddy",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=json",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "slow: Slow tests (>2s)",
    "benchmark: Benchmark tests (deferred)",
    "smoke: Quick smoke tests",
    "regression: Regression tests",
    "mutation: Mutation testing",
    "chaos: Chaos engineering test",
    "ai_generated: AI-generated test",
    "breakthrough: Breakthrough frontier test",
    "parallel_safe: Safe for parallel execution",
    "database: Database test",
    "external: External services required",
    "no_leaks: Asyncio task leak detection",
    "property: Property-based test",
]

[tool.coverage.run]
branch = true
parallel = true
concurrency = [
    "multiprocessing",
]
source = [
    "session-buddy",
]
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "except ImportError",
]

[tool.vulture]
min_confidence = 80
paths = ["session_buddy"]
exclude = ["tests/", "*/__pycache__/*"]
ignore_names = []
make_whitelist = false
sort_by_size = true

[tool.pyright]
include = [
    "session-buddy",
]
exclude = [
    "tests/*",
    "scratch",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.bandit]
target = [
    "session-buddy",
]
skips = [
    "B101",
    "B110",
    "B112",
    "B404",
    "B603",
    "B607",
]
exclude_dirs = [
    "tests/",
]

[tool.codespell]
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin"

[tool.creosote]
paths = [
    "session_buddy",
]
deps-file = "pyproject.toml"
exclude-deps = [
    # Optional/missing imports - all use try/except ImportError patterns
    "aiofiles",     # team_knowledge uses importlib find_spec, not direct import
    "aiohttp",     # ollama_provider fallback, may not be used if HTTPClientAdapter available
    "dhara",        # settings.py has optional URL field, may not connect
    "opentelemetry-api",      # opentelemetry_sdk imports via try/except
    "opentelemetry-exporter-otlp-proto-grpc",  # try/except optional
    "opentelemetry-exporter-otlp-proto-http",   # try/except optional
    "opentelemetry-sdk",      # try/except optional
    "psutil",       # app_monitor, interruption_manager use try/except ImportError
    "rich",         # quality_engine.py only uses in f-string for output formatting
    "tiktoken",     # token_optimizer.py uses try/except ImportError
    # Only keep hatchling - the only dependency from pyproject.toml that's in exclude-deps
    "hatchling",
]

[tool.refurb]
enable_all = false
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
]

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
]
max_complexity = 15

[dependency-groups]
dev = [
    "crackerjack",
    "deadcode>=2.4.1",
    "factory-boy>=3.3.3",
    "faker>=40.4.0",
]

[tool.crackerjack]
# Exclude directories and files from link checking
exclude_patterns = [
    ".venv/**",
    "node_modules/**",
    "build/**",
    "dist/**",
    ".git/**",
    "docs/ZUBAN_FIX_SUMMARY.md",
    ".claude/commands/**",
    "coverage_report/**",
    "htmlcov/**",
]

# AI agent mode configuration (default: true)
ai_agent_mode = true
