[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-buddy"
version = "0.19.16"
description = "A Session Management MCP Server for Claude Code"
readme = "README.md"
authors = [{name = "Les Leslie", email = "les@wedgwoodwebworks.com"}]
requires-python = ">=3.13"
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=25.1.0",
    "fastmcp>=3.3.1",
    "hatchling>=1.30.1",
    "numpy>=2.4.6",
    # onnxruntime, transformers removed — session-buddy uses HTTP embedding providers
    # (llama-server → Ollama → graceful degradation) for vector embeddings.
    # This removes a transitive dependency conflict across the Bodai ecosystem.
    "pydantic>=2.13.4",
    "python-ulid>=2.0.0",
    "duckdb>=1.5.3",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "typer>=0.26.6",
    "crackerjack>=0.62.0",
    "prometheus-client>=0.25.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "websockets>=16.0",
    "mcp-common[treesitter,llm]>=0.16.1",
    "dhara>=0.9.7",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.urls]
documentation = "https://github.com/lesleslie/session-buddy"
homepage = "https://github.com/lesleslie/session-buddy"
repository = "https://github.com/lesleslie/session-buddy"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = [
    "tests",
]
addopts = [
    "--cov=session_buddy",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=json",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "-p", "no:randomly",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "slow: Slow tests (>2s)",
    "benchmark: Benchmark tests (deferred)",
    "smoke: Quick smoke tests",
    "regression: Regression tests",
    "mutation: Mutation testing",
    "chaos: Chaos engineering test",
    "ai_generated: AI-generated test",
    "breakthrough: Breakthrough frontier test",
    "parallel_safe: Safe for parallel execution",
    "database: Database test",
    "external: External services required",
    "no_leaks: Asyncio task leak detection",
    "property: Property-based test",
]

[tool.coverage.run]
branch = true
parallel = true
concurrency = [
    "multiprocessing",
]
source = [
    "session-buddy",
]
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "except ImportError",
]

[tool.vulture]
min_confidence = 80
paths = ["session_buddy"]
exclude = ["tests/", "*/__pycache__/*"]
ignore_names = []
make_whitelist = false
sort_by_size = true

[tool.pyright]
include = [
    "session-buddy",
]
exclude = [
    "tests/*",
    "scratch",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.bandit]
target = [
    "session-buddy",
]
skips = [
    "B101",
    "B110",
    "B112",
    "B404",
    "B603",
    "B607",
]
exclude_dirs = [
    "tests/",
]

[tool.codespell]
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin"

[tool.creosote]
paths = [
    "session_buddy",
]
deps-file = "pyproject.toml"
exclude-deps = [
    # Optional/missing imports - all use try/except ImportError patterns
    "aiofiles",     # team_knowledge uses importlib find_spec, not direct import
    "dhara",        # settings.py has optional URL field, may not connect
    "rich",         # quality_engine.py only uses in f-string for output formatting
    # Only keep hatchling - the only dependency from pyproject.toml that's in exclude-deps
    "hatchling",
]

[tool.refurb]
enable_all = false
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
]

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
]
max_complexity = 15

[dependency-groups]
dev = [
    "crackerjack",
    "deadcode>=2.4.1",
    "factory-boy>=3.3.3",
    "faker>=40.20.0",
]

[tool.crackerjack]
# Exclude directories and files from link checking
exclude_patterns = [
    ".venv/**",
    "node_modules/**",
    "build/**",
    "dist/**",
    ".git/**",
    "docs/ZUBAN_FIX_SUMMARY.md",
    ".claude/commands/**",
    "coverage_report/**",
    "htmlcov/**",
]

# AI agent mode configuration (default: true)
ai_agent_mode = true
